[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/configurações.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Retro Gaming.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/botao.png" type="Texture" id=3]
[ext_resource path="res://scenes/configs_scene/configs_scene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Configurações" type="Sprite" parent="."]
position = Vector2( 513.75, 300.5 )
scale = Vector2( 1.01133, 1.03659 )
texture = ExtResource( 1 )

[node name="Sldr_Volume" type="HSlider" parent="."]
margin_left = 394.0
margin_top = 270.0
margin_right = 727.0
margin_bottom = 342.0
min_value = -80.0
max_value = 24.0

[node name="Cbx_mute" type="CheckBox" parent="."]
margin_left = 296.0
margin_top = 289.0
margin_right = 334.0
margin_bottom = 317.0
pressed = true

[node name="btn_voltar" type="Button" parent="."]
margin_left = 407.0
margin_top = 517.0
margin_right = 585.0
margin_bottom = 557.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Botao" type="Sprite" parent="btn_voltar"]
position = Vector2( 78, 24 )
texture = ExtResource( 3 )

[node name="Lbl_voltar" type="Label" parent="btn_voltar"]
margin_top = 1.0
margin_right = 187.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"
align = 1
valign = 1
autowrap = true
clip_text = true

[connection signal="value_changed" from="Sldr_Volume" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Cbx_mute" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="btn_voltar" to="." method="_on_btn_voltar_pressed"]
